unset default aspect ratio in schema & minor fixes to transform & spacings

--- a/packages/volto-light-theme/src/theme/_layout.scss
+++ b/packages/volto-light-theme/src/theme/_layout.scss
@@ -220,7 +220,6 @@ External link removal for all the blocks.
   & > .block.search .searchBlock-container,
   & > .block h2.headline,
   & > .block.heading .heading-wrapper,
-  & > .block.introduction .block-container,
   & > .block.teaser .teaser-item.default,
   & > .block.highlight .teaser-description-title,
   & > table,
